add member exceptions